--- a/frontend-leads-scrapper/index.html
+++ b/frontend-leads-scrapper/index.html
@@ -212,7 +212,7 @@ Get a <strong>FREE and Quick Analysis</strong> of your business, website, and so
     <div id="statusMessage" class="hidden"></div>
     
     <script>
-        const apiBase = 'http://localhost:5000';
+        const apiBase = 'https://leadsextractor-d1a64c8e4e3d.herokuapp.com';
         let scrapedLeads = [];
 
         // Function to populate table and set downloads
